--- a/index.html
+++ b/index.html
@@ -42,17 +42,17 @@
                 </span>
             </button>
             <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
-                <ul class="navbar-nav nav-links">
-                    <li class="nav-item">
+                <ul class="navbar-nav nav-links d-flex">
+                    <li class="nav-item my-auto">
                         <a class="nav-link nav-link2 mx-lg-5 mx-md-5" href="#">About</a>
                     </li>
-                    <li class="nav-item">
+                    <li class="nav-item my-auto">
                         <a class="nav-link nav-link2 mx-lg-5 mx-md-5" href="#">Les oeuvres</a>
                     </li>
-                    <li class="nav-item">
+                    <li class="nav-item my-auto">
                         <a class="nav-link nav-link2 mx-lg-5 mx-md-5" href="#">Parcours</a>
                     </li>
-                    <li class="nav-item">
+                    <li class="nav-item my-auto">
                         <a class="nav-link nav-link2 mx-lg-5 mx-md-5" href="#">Contact</a>
                     </li>
                     <li class="nav-item nav-social-link">
