--- a/index.html
+++ b/index.html
@@ -8,28 +8,15 @@
     <script src="assets/vendor/bootstrap5/js/bootstrap.min.js"></script>
     <link rel="stylesheet" href="assets/css/styles.css">
     <link rel="stylesheet" href="assets/css/responsive.css">
-    <title>Doff - Artiste</title>
+    <title>DOFF - Artiste</title>
 </head>
 <body>
 
-    <!-- <nav class="navbar navbar-light ">
-        <div class="container-fluid">
-            <a class="navbar-brand" href="#">
-                <img src="" alt="" width="30" height="24"
-                    class="d-inline-block align-text-top">
-                <span class="w-50">ARTISTE PLASTICIEN
-                SCÉNOGRAPHE</span>
-                
-            </a>
-        </div>
-    </nav> -->
-
     <nav class="navbar navbar-expand-lg navbar-light bg-light shadow p-3 mb-5 bg-body rounded" id="nav-container">
         <div class="container-lg head-nav-div">
-            <a class="navbar-brand logo-complet" href="#">
-                <img src="assets/img/logo1x.png" alt="" width="80.97" height="51.5" class="logo">
-                <span class="logo-text float-end ms-3 my-auto">ARTISTE PLASTICIEN <br>
-                SCÉNOGRAPHE</span>
+            <a class="navbar-brand logo-complet" href="index.html">
+                <img src="assets/img/logo.svg" alt="" width="80.97" height="51.5" class="logo">
+                <span class="logo-text float-end ms-2 my-auto">ARTISTE PLASTICIEN <br> SCÉNOGRAPHE</span>
             </a>
             <button class="tog-nav navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
                 aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -44,24 +31,24 @@
             <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
                 <ul class="navbar-nav nav-links d-flex">
                     <li class="nav-item my-auto">
-                        <a class="nav-link nav-link2 mx-lg-5 mx-md-5" href="#">About</a>
+                        <a class="nav-link nav-link2 mx-lg-5 mx-md-5" href="about.html">About</a>
                     </li>
                     <li class="nav-item my-auto">
-                        <a class="nav-link nav-link2 mx-lg-5 mx-md-5" href="#">Les oeuvres</a>
+                        <a class="nav-link nav-link2 mx-lg-5 mx-md-5" href="oeuvres.html">Les oeuvres</a>
                     </li>
                     <li class="nav-item my-auto">
-                        <a class="nav-link nav-link2 mx-lg-5 mx-md-5" href="#">Parcours</a>
+                        <a class="nav-link nav-link2 mx-lg-5 mx-md-5" href="parcours.html">Parcours</a>
                     </li>
                     <li class="nav-item my-auto">
-                        <a class="nav-link nav-link2 mx-lg-5 mx-md-5" href="#">Contact</a>
+                        <a class="nav-link nav-link2 mx-lg-5 mx-md-5" href="contact.html">Contact</a>
                     </li>
                     <li class="nav-item nav-social-link">
-                        <a class="nav-link">
+                        <a class="nav-link" href="#">
                             <img src="assets/img/facebook1x.png" alt="" width="30" height="30">
                         </a>
                     </li>
                     <li class="nav-item nav-social-link">
-                        <a class="nav-link">
+                        <a class="nav-link" href="#">
                             <img src="assets/img/insta1x.png" alt="" width="30" height="30">
                         </a>
                     </li>
@@ -69,41 +56,110 @@
             </div>
         </div>
     </nav>
+    
+    <div class="container">
 
-    <!-- <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <div class="container-fluid">
-            <a class="navbar-brand" href="#">Navbar</a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
-                aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarNav">
-                <ul class="navbar-nav">
-                    <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="#">Home</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">Features</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">Pricing</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link disabled">Disabled</a>
-                    </li>
-                </ul>
+        <div id="carouselExampleCaptions" class="carousel slide carousel-desktop" data-bs-ride="carousel">
+            <!-- <div class="carousel-indicators">
+                <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active"
+                    aria-current="true" aria-label="Slide 1"></button>
+                <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1"
+                    aria-label="Slide 2"></button>
+                <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2"
+                    aria-label="Slide 3"></button>
+            </div> -->
+            <div class="carousel-inner">
+                <div class="carousel-item active">
+                    <img src="assets/img/slide-1-1x.png" class="d-block w-100" alt="...">
+                    <div class="carousel-caption d-none d-md-block">
+                        <h5>D’APPOLINAIRE GUIDIMBAYE À DOFF : <br>
+                        TOUT EST UNE QUESTION DE TEMPS</h5>
+                        <!-- <p>Some representative placeholder content for the first slide.</p> -->
+                    </div>
+                </div>
+                <div class="carousel-item">
+                    <img src="assets/img/slide-2-1x.png" class="d-block w-100" alt="...">
+                    <a href="oeuvres.html">
+                        <div class="carousel-caption carousel-caption-other d-none d-md-block">
+                            <h5>L'HOMME AFRICAIN</h5>
+                            <!-- <p>Some representative placeholder content for the second slide.</p> -->
+                        </div>
+                    </a>
+                </div>
+                <div class="carousel-item">
+                    <img src="assets/img/slide-3-1x.png" class="d-block w-100" alt="...">
+                    <a href="oeuvres.html">
+                        <div class="carousel-caption carousel-caption-other d-none d-md-block">
+                            <h5>MATIERE NOIRE</h5>
+                            <!-- <p>Some representative placeholder content for the third slide.</p> -->
+                        </div>
+                    </a>
+                </div>
             </div>
+            <button class="carousel-control-prev btn-slide-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
+                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Previous</span>
+            </button>
+            <button class="carousel-control-next btn-slide-next" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="next">
+                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Next</span>
+            </button>
         </div>
-    </nav> -->
+
+        <div class="carousel-mobile">
+            <div class="">
+                <img src="assets/img_mobile/img-1-2x.png" class="d-block w-100 filtre" alt="...">
+                <div class="">
+                    <div class="carousel-desc carousel-desc-1 d-md-block">
+                        <h5>D’APPOLINAIRE GUIDIMBAYE À DOFF : <br>
+                            TOUT EST UNE QUESTION DE TEMPS</h5>
+                    </div>
+                </div>
+            </div>
+
+
+            <div class="">
+                <img src="assets/img_mobile/img-2-2x.png" class="d-block w-100 filtre" alt="...">
+                <a href="oeuvres.html">
+                    <div class="carousel-desc d-md-block">
+                        <h5>L'HOMME AFRICAIN</h5>
+                    </div>
+                </a>
+            </div>
+
+            <div class="">
+                <img src="assets/img_mobile/img-3-2x.png" class="d-block w-100 filtre" alt="...">
+                <a href="oeuvres.html">
+                    <div class="carousel-desc d-md-block">
+                        <h5>MATIERE NOIRE</h5>
+                    </div>
+                </a>
+            </div>            
+
+        </div>
+
+        <footer class="footer-desktop mt-5">
+            <h5 class="text-center footer-text">APPOLINAIRE GUIDIMBAYE ALIAS DOFF - ARTISTE PLASTICIEN SCÉNOGRAPHE - © 2022</h5>
+        </footer>
+
+        <footer class="footer-mobile mt-5">
+            <div class="footer-social-link m-auto mb-5">
+                <a href="#">
+                    <img src="assets/img/facebook1x.png" alt="" width="30" height="30">
+                </a>
+                <a href="#" class="ms-3">
+                    <img src="assets/img/insta1x.png" alt="" width="30" height="30">
+                </a>
+            </div>
+            <h5 class="text-center footer-text">APPOLINAIRE GUIDIMBAYE ALIAS DOFF <br> ARTISTE PLASTICIEN SCÉNOGRAPHE - © 2022</h5>
+        </footer>
+
+    </div>
+
     <script>
         function myFunction(x) {
             x.classList.toggle("change");
         }
-        // var p = document.querySelector("tog-nav");
-        // p.addEventListener('click', togmarge);
-        // function togmarge(x = document.querySelector("nav-links")){
-        //     x.classList.toggle("tog-marge")
-        // }
     </script>
 </body>
 </html>
