Fin page <Les oeuvres>

--- a/index.html
+++ b/index.html
@@ -56,7 +56,10 @@
             </div>
         </div>
     </nav>
-    
+    <br><br><br><br>
+    <span class="br-after-nav">
+        <br><br>
+    </span>
     <div class="container">
 
         <div id="carouselExampleCaptions" class="carousel slide carousel-desktop" data-bs-ride="carousel">
@@ -118,7 +121,7 @@
             </div>
 
 
-            <div class="">
+            <div class="mb-4">
                 <img src="assets/img_mobile/img-2-2x.png" class="d-block w-100 filtre" alt="...">
                 <a href="oeuvres.html">
                     <div class="carousel-desc d-md-block">
