--- a/index.html
+++ b/index.html
@@ -56,7 +56,9 @@
             </div>
         </div>
     </nav>
-    <br><br><br><br>
+    <span class="first-br-after-nav">
+        <br><br><br><br>
+    </span>
     <span class="br-after-nav">
         <br><br>
     </span>
