--- a/oeuvres.html
+++ b/oeuvres.html
@@ -58,7 +58,9 @@
             </div>
         </div>
     </nav>
-    <br><br><br><br>
+    <span class="first-br-after-nav">
+        <br><br><br><br>
+    </span>
     <span class="br-after-nav">
         <br><br>
     </span>
