Images adaptatives et loader

--- a/oeuvres.html
+++ b/oeuvres.html
@@ -14,6 +14,14 @@
 </head>
 <body>
 
+        <div class="fa-3x">
+            <!-- <i class="fas fa-circle-notch fa-spin"></i> -->
+            <i class="fas fa-sync fa-spin"></i>
+        </div>
+
+
+<div class="content-page">
+
     <nav class="navbar navbar-expand-lg navbar-light bg-light shadow p-3 mb-5 bg-body rounded" id="nav-container">
         <div class="container-lg head-nav-div">
             <a class="navbar-brand logo-complet" href="index.html">
@@ -77,7 +85,7 @@
                 <div class="row">
                     <div class="col-md-6 oeuvre-left">
                         <div class="card bg-white text-white border-0 card-oeuvre ha-1-class">
-                            <img src="assets/img/ha-1.svg" class="card-img" alt="..."  >
+                            <img srcset="assets/img/ha-1-2x.png 1584w, assets/img/ha-1-1x.png 792w, assets/img_mobile/ha-1-2x.png 734w, assets/img_mobile/ha-1-1x.png 367w" src="assets/img/ha-1.svg" class="card-img" alt="..."  >
                             <div class="card-img-overlay card-oeuvre-filtre">
                                 <div class="card-text-perso">
                                     <h5 class="card-title">ASPIRATIONS</h5>
@@ -96,7 +104,7 @@
                     <span class="br-after-oeuvre"><br><br></span>
                     <div class="col-md-6 oeuvre-right">
                         <div class="card bg-white text-white border-0 card-oeuvre ha-2-class">
-                            <img src="assets/img/ha-2.svg" class="card-img" alt="..."  >
+                            <img srcset="assets/img/ha-2-2x.png 1584w, assets/img/ha-2-1x.png 792w, assets/img_mobile/ha-2-2x.png 740w, assets/img_mobile/ha-2-1x.png 370w" src="assets/img/ha-2.svg" class="card-img" alt="..."  >
                             <div class="card-img-overlay card-oeuvre-filtre">
                                 <div class="card-text-perso">
                                     <h5 class="card-title">ASPIRATIONS</h5>
@@ -118,7 +126,7 @@
                 <div class="row mt-5">
                     <div class="col-md-6 oeuvre-left">
                         <div class="card bg-white text-white border-0 card-oeuvre ha-3-class">
-                            <img src="assets/img/ha-3.svg" class="card-img" alt="...">
+                            <img srcset="assets/img/ha-3-2x.png 1584w, assets/img/ha-3-1x.png 792w, assets/img_mobile/ha-3-2x.png 734w, assets/img_mobile/ha-3-1x.png 367w" src="assets/img/ha-3.svg" class="card-img" alt="...">
                             <div class="card-img-overlay card-oeuvre-filtre">
                                 <div class="card-text-perso">
                                     <h5 class="card-title">ASPIRATIONS</h5>
@@ -137,7 +145,7 @@
                     <span class="br-after-oeuvre"><br><br></span>
                     <div class="col-md-6 oeuvre-right">
                         <div class="card bg-white text-white border-0 card-oeuvre ha-4-class">
-                            <img src="assets/img/ha-4.svg" class="card-img" alt="...">
+                            <img srcset="assets/img/ha-4-2x.png 1584w, assets/img/ha-4-1x.png 792w, assets/img_mobile/ha-4-2x.png 734w, assets/img_mobile/ha-4-1x.png 367w" src="assets/img/ha-4.svg" class="card-img" alt="...">
                             <div class="card-img-overlay card-oeuvre-filtre">
                                 <div class="card-text-perso">
                                     <h5 class="card-title">ASPIRATIONS</h5>
@@ -167,7 +175,7 @@
                 <div class="row">
                     <div class="col-md-6 oeuvre-left">
                         <div class="card bg-white text-white border-0 card-oeuvre mn-1-class">
-                            <img src="assets/img/mn-1.svg" class="card-img" alt="...">
+                            <img srcset="assets/img/mn-1-2x.png 1584w, assets/img/mn-1-1x.png 792w, assets/img_mobile/mn-1-2x.png 734w, assets/img_mobile/mn-1-1x.png 367w" src="assets/img/mn-1.svg" class="card-img" alt="...">
                             <div class="card-img-overlay card-oeuvre-filtre">
                                 <div class="card-text-perso">
                                     <h5 class="card-title">ASPIRATIONS</h5>
@@ -186,7 +194,7 @@
                     <span class="br-after-oeuvre"><br><br></span>
                     <div class="col-md-6 oeuvre-right">
                         <div class="card bg-white text-white border-0 card-oeuvre mn-2-class">
-                            <img src="assets/img/mn-2.svg" class="card-img" alt="...">
+                            <img srcset="assets/img/mn-2-2x.png 1584w, assets/img/mn-2-1x.png 792w, assets/img_mobile/mn-2-2x.png 734w, assets/img_mobile/mn-2-1x.png 367w" src="assets/img/mn-2.svg" class="card-img" alt="...">
                             <div class="card-img-overlay card-oeuvre-filtre">
                                 <div class="card-text-perso">
                                     <h5 class="card-title">ASPIRATIONS</h5>
@@ -208,7 +216,7 @@
                 <div class="row mt-5">
                     <div class="col-md-6 oeuvre-left">
                         <div class="card bg-white text-white border-0 card-oeuvre mn-3-class">
-                            <img src="assets/img/mn-3.svg" class="card-img" alt="...">
+                            <img srcset="assets/img/mn-3-2x.png 1584w, assets/img/mn-3-1x.png 792w, assets/img_mobile/mn-3-2x.png 734w, assets/img_mobile/mn-3-1x.png 367w" src="assets/img/mn-3.svg" class="card-img" alt="...">
                             <div class="card-img-overlay card-oeuvre-filtre">
                                 <div class="card-text-perso">
                                     <h5 class="card-title">ASPIRATIONS</h5>
@@ -227,7 +235,7 @@
                     <span class="br-after-oeuvre"><br><br></span>
                     <div class="col-md-6 oeuvre-right">
                         <div class="card bg-white text-white border-0 card-oeuvre mn-4-class">
-                            <img src="assets/img/mn-4.svg" class="card-img" alt="...">
+                            <img srcset="assets/img/mn-4-2x.png 1584w, assets/img/mn-4-1x.png 792w, assets/img_mobile/mn-4-2x.png 734w, assets/img_mobile/mn-4-1x.png 367w" src="assets/img/mn-4.svg" class="card-img" alt="...">
                             <div class="card-img-overlay card-oeuvre-filtre">
                                 <div class="card-text-perso">
                                     <h5 class="card-title">ASPIRATIONS</h5>
@@ -250,101 +258,101 @@
     </article>
 
 
-<!-- Modal -->
-<!-- Modal ha-1 -->
-<div class="modal fade" id="ha-1" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1"
-    aria-labelledby="staticBackdropLabel" aria-hidden="true">
-    <div class="modal-dialog modal-dialog-centered">
-        <div class="modal-content bg-transparent">
-                    <img src="assets/img/close-img.svg" alt="" width="50" height="50" type="button" class="my-btn-close" data-bs-dismiss="modal" aria-label="Close">
-                <img src="assets/img/ha-1-big.png" alt="">
+    <!-- Modal -->
+    <!-- Modal ha-1 -->
+    <div class="modal fade" id="ha-1" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1"
+        aria-labelledby="staticBackdropLabel" aria-hidden="true">
+        <div class="modal-dialog modal-dialog-centered">
+            <div class="modal-content bg-transparent">
+                        <img src="assets/img/close-img.svg" alt="" width="50" height="50" type="button" class="my-btn-close" data-bs-dismiss="modal" aria-label="Close">
+                    <img srcset="assets/img/ha-1-big-2x.png 1131w, assets/img/ha-1-big-1x.png 566w, assets/img_mobile/ha-1-big-2x.png 691w, assets/img_mobile/ha-1-big-1x.png 346w" src="assets/img/ha-1-big-1x.png" alt="">
+            </div>
         </div>
     </div>
-</div>
 
-<!-- Modal ha-2 -->
-<div class="modal fade" id="ha-2" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1"
-    aria-labelledby="staticBackdropLabel" aria-hidden="true">
-    <div class="modal-dialog modal-dialog-centered">
-        <div class="modal-content bg-transparent">
-            <img src="assets/img/close-img.svg" alt="" width="50" height="50" type="button" class="my-btn-close"
-                data-bs-dismiss="modal" aria-label="Close">
-            <img src="assets/img/ha-2.svg" alt="">
+    <!-- Modal ha-2 -->
+    <div class="modal fade" id="ha-2" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1"
+        aria-labelledby="staticBackdropLabel" aria-hidden="true">
+        <div class="modal-dialog modal-dialog-centered">
+            <div class="modal-content bg-transparent">
+                <img src="assets/img/close-img.svg" alt="" width="50" height="50" type="button" class="my-btn-close"
+                    data-bs-dismiss="modal" aria-label="Close">
+                <img srcset="assets/img/ha-2-2x.png 1584w, assets/img/ha-2-1x.png 792w, assets/img_mobile/ha-2-2x.png 740w, assets/img_mobile/ha-2-1x.png 370w" src="assets/img/ha-2.svg" alt="">
+            </div>
         </div>
     </div>
-</div>
 
-<!-- Modal ha-3 -->
-<div class="modal fade" id="ha-3" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1"
-    aria-labelledby="staticBackdropLabel" aria-hidden="true">
-    <div class="modal-dialog modal-dialog-centered">
-        <div class="modal-content bg-transparent">
-            <img src="assets/img/close-img.svg" alt="" width="50" height="50" type="button" class="my-btn-close"
-                data-bs-dismiss="modal" aria-label="Close">
-            <img src="assets/img/ha-3.svg" alt="">
+    <!-- Modal ha-3 -->
+    <div class="modal fade" id="ha-3" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1"
+        aria-labelledby="staticBackdropLabel" aria-hidden="true">
+        <div class="modal-dialog modal-dialog-centered">
+            <div class="modal-content bg-transparent">
+                <img src="assets/img/close-img.svg" alt="" width="50" height="50" type="button" class="my-btn-close"
+                    data-bs-dismiss="modal" aria-label="Close">
+                <img srcset="assets/img/ha-3-2x.png 1584w, assets/img/ha-3-1x.png 792w, assets/img_mobile/ha-3-2x.png 734w, assets/img_mobile/ha-3-1x.png 367w" src="assets/img/ha-3.svg" alt="">
+            </div>
         </div>
     </div>
-</div>
 
-<!-- Modal ha-4 -->
-<div class="modal fade" id="ha-4" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1"
-    aria-labelledby="staticBackdropLabel" aria-hidden="true">
-    <div class="modal-dialog modal-dialog-centered">
-        <div class="modal-content bg-transparent">
-            <img src="assets/img/close-img.svg" alt="" width="50" height="50" type="button" class="my-btn-close"
-                data-bs-dismiss="modal" aria-label="Close">
-            <img src="assets/img/ha-4.svg" alt="">
+    <!-- Modal ha-4 -->
+    <div class="modal fade" id="ha-4" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1"
+        aria-labelledby="staticBackdropLabel" aria-hidden="true">
+        <div class="modal-dialog modal-dialog-centered">
+            <div class="modal-content bg-transparent">
+                <img src="assets/img/close-img.svg" alt="" width="50" height="50" type="button" class="my-btn-close"
+                    data-bs-dismiss="modal" aria-label="Close">
+                <img srcset="assets/img/ha-4-2x.png 1584w, assets/img/ha-4-1x.png 792w, assets/img_mobile/ha-4-2x.png 734w, assets/img_mobile/ha-4-1x.png 367w" src="assets/img/ha-4.svg" alt="">
+            </div>
         </div>
     </div>
-</div>
 
-<!-- Modal mn-1 -->
-<div class="modal fade" id="mn-1" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1"
-    aria-labelledby="staticBackdropLabel" aria-hidden="true">
-    <div class="modal-dialog modal-dialog-centered">
-        <div class="modal-content bg-transparent">
-            <img src="assets/img/close-img.svg" alt="" width="50" height="50" type="button" class="my-btn-close"
-                data-bs-dismiss="modal" aria-label="Close">
-            <img src="assets/img/mn-1.svg" alt="">
+    <!-- Modal mn-1 -->
+    <div class="modal fade" id="mn-1" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1"
+        aria-labelledby="staticBackdropLabel" aria-hidden="true">
+        <div class="modal-dialog modal-dialog-centered">
+            <div class="modal-content bg-transparent">
+                <img src="assets/img/close-img.svg" alt="" width="50" height="50" type="button" class="my-btn-close"
+                    data-bs-dismiss="modal" aria-label="Close">
+                <img srcset="assets/img/mn-1-2x.png 1584w, assets/img/mn-1-1x.png 792w, assets/img_mobile/mn-1-2x.png 734w, assets/img_mobile/mn-1-1x.png 367w" src="assets/img/mn-1.svg" alt="">
+            </div>
         </div>
     </div>
-</div>
 
-<!-- Modal mn-2 -->
-<div class="modal fade" id="mn-2" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1"
-    aria-labelledby="staticBackdropLabel" aria-hidden="true">
-    <div class="modal-dialog modal-dialog-centered">
-        <div class="modal-content bg-transparent">
-            <img src="assets/img/close-img.svg" alt="" width="50" height="50" type="button" class="my-btn-close"
-                data-bs-dismiss="modal" aria-label="Close">
-            <img src="assets/img/mn-2.svg" alt="">
+    <!-- Modal mn-2 -->
+    <div class="modal fade" id="mn-2" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1"
+        aria-labelledby="staticBackdropLabel" aria-hidden="true">
+        <div class="modal-dialog modal-dialog-centered">
+            <div class="modal-content bg-transparent">
+                <img src="assets/img/close-img.svg" alt="" width="50" height="50" type="button" class="my-btn-close"
+                    data-bs-dismiss="modal" aria-label="Close">
+                <img srcset="assets/img/mn-2-2x.png 1584w, assets/img/mn-2-1x.png 792w, assets/img_mobile/mn-2-2x.png 734w, assets/img_mobile/mn-2-1x.png 367w" src="assets/img/mn-2.svg" alt="">
+            </div>
         </div>
     </div>
-</div>
 
-<!-- Modal mn-3 -->
-<div class="modal fade" id="mn-3" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1"
-    aria-labelledby="staticBackdropLabel" aria-hidden="true">
-    <div class="modal-dialog modal-dialog-centered">
-        <div class="modal-content bg-transparent">
-            <img src="assets/img/close-img.svg" alt="" width="50" height="50" type="button" class="my-btn-close"
-                data-bs-dismiss="modal" aria-label="Close">
-            <img src="assets/img/mn-3.svg" alt="">
+    <!-- Modal mn-3 -->
+    <div class="modal fade" id="mn-3" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1"
+        aria-labelledby="staticBackdropLabel" aria-hidden="true">
+        <div class="modal-dialog modal-dialog-centered">
+            <div class="modal-content bg-transparent">
+                <img src="assets/img/close-img.svg" alt="" width="50" height="50" type="button" class="my-btn-close"
+                    data-bs-dismiss="modal" aria-label="Close">
+                <img srcset="assets/img/mn-3-2x.png 1584w, assets/img/mn-3-1x.png 792w, assets/img_mobile/mn-3-2x.png 734w, assets/img_mobile/mn-3-1x.png 367w" src="assets/img/mn-3.svg" alt="">
+            </div>
         </div>
     </div>
-</div>
 
-<!-- Modal mn-4 -->
-<div class="modal fade" id="mn-4" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1"
-    aria-labelledby="staticBackdropLabel" aria-hidden="true">
-    <div class="modal-dialog modal-dialog-centered">
-        <div class="modal-content bg-transparent">
-            <img src="assets/img/close-img.svg" alt="" width="50" height="50" type="button" class="my-btn-close"
-                data-bs-dismiss="modal" aria-label="Close">
-            <img src="assets/img/mn-4.svg" alt="">
+    <!-- Modal mn-4 -->
+    <div class="modal fade" id="mn-4" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1"
+        aria-labelledby="staticBackdropLabel" aria-hidden="true">
+        <div class="modal-dialog modal-dialog-centered">
+            <div class="modal-content bg-transparent">
+                <img src="assets/img/close-img.svg" alt="" width="50" height="50" type="button" class="my-btn-close"
+                    data-bs-dismiss="modal" aria-label="Close">
+                <img srcset="assets/img/mn-4-2x.png 1584w, assets/img/mn-4-1x.png 792w, assets/img_mobile/mn-4-2x.png 734w, assets/img_mobile/mn-4-1x.png 367w" src="assets/img/mn-4.svg" alt="">
+            </div>
         </div>
     </div>
-</div>
 
 
     <footer class="footer-desktop mt-5">
@@ -364,13 +372,16 @@
         </h5>
     </footer>
 
-
+</div>
 
     <script>
         function myFunction(x) {
             x.classList.toggle("change");
         }
     </script>
+    <script src="https://code.jquery.com/jquery-3.6.0.js"></script>
+    <script src="https://kit.fontawesome.com/4565dce3a1.js" crossorigin="anonymous"></script>
+    <script src="assets/js/script.js"></script>
     <script src="assets/js/script-oeuvres.js"></script>
 </body>
 </html>
