--- a/index.html
+++ b/index.html
@@ -12,6 +12,13 @@
 </head>
 <body>
 
+    <div class="fa-3x">
+        <!-- <i class="fas fa-circle-notch fa-spin"></i> -->
+        <i class="fas fa-sync fa-spin"></i>
+    </div>
+
+<div class="content-page">
+
     <nav class="navbar navbar-expand-lg navbar-light bg-light shadow p-3 mb-5 bg-body rounded" id="nav-container">
         <div class="container-lg head-nav-div">
             <a class="navbar-brand logo-complet" href="index.html">
@@ -75,7 +82,7 @@
             </div> -->
             <div class="carousel-inner">
                 <div class="carousel-item active">
-                    <img src="assets/img/slide-1-1x.png" class="d-block w-100" alt="...">
+                    <img srcset="assets/img/slide-1-2x.png 3428w, assets/img/slide-1-1x.png 1714w, assets/img_mobile/img-1-2x.png 736w, assets/img_mobile/img-1-1x.png 368w" src="assets/img/slide-1-1x.png" class="d-block w-100" alt="...">
                     <div class="carousel-caption d-none d-md-block">
                         <h5>D’APPOLINAIRE GUIDIMBAYE À DOFF : <br>
                         TOUT EST UNE QUESTION DE TEMPS</h5>
@@ -83,7 +90,7 @@
                     </div>
                 </div>
                 <div class="carousel-item">
-                    <img src="assets/img/slide-2-1x.png" class="d-block w-100" alt="...">
+                    <img srcset="assets/img/slide-2-2x.png 3428w, assets/img/slide-2-1x.png 1714w, assets/img_mobile/img-2-2x.png 736w, assets/img_mobile/img-2-1x.png 368w" src="assets/img/slide-2-1x.png" class="d-block w-100" alt="...">
                     <a href="oeuvres.html">
                         <div class="carousel-caption carousel-caption-other d-none d-md-block">
                             <h5>L'HOMME AFRICAIN</h5>
@@ -92,7 +99,7 @@
                     </a>
                 </div>
                 <div class="carousel-item">
-                    <img src="assets/img/slide-3-1x.png" class="d-block w-100" alt="...">
+                    <img srcset="assets/img/slide-3-2x.png 3428w, assets/img/slide-3-1x.png 1714w, assets/img_mobile/img-3-2x.png 736w, assets/img_mobile/img-3-1x.png 368w" src="assets/img/slide-3-1x.png" class="d-block w-100" alt="...">
                     <a href="oeuvres.html">
                         <div class="carousel-caption carousel-caption-other d-none d-md-block">
                             <h5>MATIERE NOIRE</h5>
@@ -113,7 +120,7 @@
 
         <div class="carousel-mobile">
             <div class="">
-                <img src="assets/img_mobile/img-1-2x.png" class="d-block w-100 filtre" alt="...">
+                <img srcset="assets/img_mobile/img-1-2x.png 736w, assets/img_mobile/img-1-1x.png 368w" src="assets/img_mobile/img-1-2x.png" class="d-block w-100 filtre" alt="...">
                 <div class="">
                     <div class="carousel-desc carousel-desc-1 d-md-block">
                         <h5>D’APPOLINAIRE GUIDIMBAYE À DOFF : <br>
@@ -124,7 +131,7 @@
 
 
             <div class="mb-4">
-                <img src="assets/img_mobile/img-2-2x.png" class="d-block w-100 filtre" alt="...">
+                <img srcset="assets/img_mobile/img-2-2x.png 736w, assets/img_mobile/img-2-1x.png 368w" src="assets/img_mobile/img-2-2x.png" class="d-block w-100 filtre" alt="...">
                 <a href="oeuvres.html">
                     <div class="carousel-desc d-md-block">
                         <h5>L'HOMME AFRICAIN</h5>
@@ -133,7 +140,7 @@
             </div>
 
             <div class="">
-                <img src="assets/img_mobile/img-3-2x.png" class="d-block w-100 filtre" alt="...">
+                <img srcset="assets/img_mobile/img-3-2x.png 736w, assets/img_mobile/img-3-1x.png 368w" src="assets/img_mobile/img-3-2x.png" class="d-block w-100 filtre" alt="...">
                 <a href="oeuvres.html">
                     <div class="carousel-desc d-md-block">
                         <h5>MATIERE NOIRE</h5>
@@ -160,11 +167,14 @@
         </footer>
 
     </div>
-
+</div>
     <script>
         function myFunction(x) {
             x.classList.toggle("change");
         }
     </script>
+    <script src="https://code.jquery.com/jquery-3.6.0.js"></script>
+    <script src="https://kit.fontawesome.com/4565dce3a1.js" crossorigin="anonymous"></script>
+    <script src="assets/js/script.js"></script>
 </body>
 </html>
