--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
                 </div>
                 <div class="carousel-item">
                     <img srcset="assets/img/slide-2-2x.png 3428w, assets/img/slide-2-1x.png 1714w, assets/img_mobile/img-2-2x.png 736w, assets/img_mobile/img-2-1x.png 368w" src="assets/img/slide-2-1x.png" class="d-block w-100" alt="...">
-                    <a href="oeuvres.html">
+                    <a href="oeuvres.html#ha" class="ha-link">
                         <div class="carousel-caption carousel-caption-other d-none d-md-block">
                             <h5>L'HOMME AFRICAIN</h5>
                             <!-- <p>Some representative placeholder content for the second slide.</p> -->
@@ -100,7 +100,7 @@
                 </div>
                 <div class="carousel-item">
                     <img srcset="assets/img/slide-3-2x.png 3428w, assets/img/slide-3-1x.png 1714w, assets/img_mobile/img-3-2x.png 736w, assets/img_mobile/img-3-1x.png 368w" src="assets/img/slide-3-1x.png" class="d-block w-100" alt="...">
-                    <a href="oeuvres.html">
+                    <a href="oeuvres.html#mn" class="mn-link">
                         <div class="carousel-caption carousel-caption-other d-none d-md-block">
                             <h5>MATIERE NOIRE</h5>
                             <!-- <p>Some representative placeholder content for the third slide.</p> -->
@@ -132,7 +132,7 @@
 
             <div class="mb-4">
                 <img srcset="assets/img_mobile/img-2-2x.png 736w, assets/img_mobile/img-2-1x.png 368w" src="assets/img_mobile/img-2-2x.png" class="d-block w-100 filtre" alt="...">
-                <a href="oeuvres.html">
+                <a href="oeuvres.html#ha" class="ha-link-m">
                     <div class="carousel-desc d-md-block">
                         <h5>L'HOMME AFRICAIN</h5>
                     </div>
@@ -141,7 +141,7 @@
 
             <div class="">
                 <img srcset="assets/img_mobile/img-3-2x.png 736w, assets/img_mobile/img-3-1x.png 368w" src="assets/img_mobile/img-3-2x.png" class="d-block w-100 filtre" alt="...">
-                <a href="oeuvres.html">
+                <a href="oeuvres.html#mn" class="mn-link-m">
                     <div class="carousel-desc d-md-block">
                         <h5>MATIERE NOIRE</h5>
                     </div>
