--- a/oeuvres.html
+++ b/oeuvres.html
@@ -75,7 +75,7 @@
 
     <article class="oeuvres mt-md-3">
 
-        <section class="pt-3">
+        <section class="pt-3" id="ha">
             <div class="oeuvres-title">
                 <h1>L'homme Africain</h1>
                 <img src="assets/img/underline.svg" alt="">
@@ -165,7 +165,7 @@
             </div>
         </section>
 
-        <section class="mt-5 mn-section">
+        <section class="mt-5 mn-section" id="mn">
             <div class="oeuvres-title">
                 <h1>Matiere Noire</h1>
                 <img src="assets/img/underline.svg" alt="">
