Fin page <Contact>

--- a/about.html
+++ b/about.html
@@ -146,11 +146,11 @@
         </article>
 
 
-        <footer class="footer-desktop mt-5">
+        <footer class="footer-desktop mt-5 mb-5">
             <h5 class="text-center footer-text">APPOLINAIRE GUIDIMBAYE ALIAS DOFF - ARTISTE PLASTICIEN SCÉNOGRAPHE - © 2022</h5>
         </footer>
         
-        <footer class="footer-mobile mt-5">
+        <footer class="footer-mobile mt-5 mb-5">
             <div class="footer-social-link m-auto mb-5">
                 <a href="#">
                     <img src="assets/img/facebook1x.png" alt="" width="30" height="30">
